# crafting-interpreter-in-c-

./: CMakeLists.txt  README.md  fuck.txt  playground  playground.cpp
include/lox/: Token.h  TokenType.h
src/: CMakeLists.txt  Token.cpp  main.cpp
